feat: reset password translation

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -122,6 +122,7 @@ VerifyAccount=Verificar Cuenta
 CheckEmailVerification=Por favor, verifique su casilla de correo para activar su cuenta.
 RegisterSuccess=Registro exitoso!
 ResetPassword=Reestablecer Contrasena
+NewPassword=Nueva Contrasena
 ResetPasswordError=Link invalido o expírado.
 ResetPasswordEmailSentDetails=Se ha enviado un email a su casilla de correo con un link para reestablecer su contraseña.
 ResetPasswordEmailSent=Email enviado
