--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -233,6 +233,7 @@ VerifyAccount=Verify Account
 CheckEmailVerification=Please check your email for a verification link.
 RegisterSuccess=Account created succesfully!
 ResetPassword=Reset Password
+NewPassword=Nueva Contrasena
 ResetPasswordError=Invalid link or expired.
 ResetPasswordEmailSentDetails=An email has been sent to your account with instructions to reset your password.
 ResetPasswordEmailSent=Email sent!
