--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -126,6 +126,7 @@ VerifyAccount=Verificar Cuenta
 CheckEmailVerification=Por favor, verifique su casilla de correo para activar su cuenta.
 RegisterSuccess=Registro exitoso!
 ResetPassword=Reestablecer Contrasena
+NewPassword=Nueva Contrasena
 ResetPhrase1=Hemos recibido una solicitud para reestablecer su contraseña.
 ResetPhrase2=Si usted no ha realizado esta solicitud, por favor ignore este email. De lo contrario, haga click en el siguiente link para reestablecer su contraseña. El link va a permanecer activo por 24 horas.
 ResetPasswordError=Link invalido o expírado.
