Feat: internationalized UserNotFoundException

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -273,6 +273,7 @@ Continue=Continuar
 403ErrorCode=Acceso denegado.
 PageNotFound=Pagina no encontrada
 404UserMsg=Usuario no encontrado
+exception.userNotFound=Usuario no encontrado
 
 #Success
 TripCreated=Viaje creado con éxito
