--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -274,6 +274,8 @@ Continue=Continuar
 403ErrorCode=Forbidden.
 PageNotFound=Page not found
 404UserMsg=User not found
+exception.userNotFound=User not found
+
 
 #Success
 TripCreated=Trip created successfully!
