ft: profile done

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -27,13 +27,13 @@
       "cuit": "Cuit/Cuil",
       "name": "Name",
       "email": "Email",
-      "editProfile"d:"Edit Profile",
+      "editProfile":"Edit Profile",
       "completedTrips": "Completed Trips",
       "profile": "Profile"
     },
 
     "review": {
-        "review": "Review"
+        "reviews": "Reviews"
     }
 
 }
