Feat: i18n on api

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -1,3 +1,13 @@
+#Exceptions
+exception.UserNotFound=Usuario no encontrado
+exception.InvalidToken=Token invalido
+exception.CuitNotAvailable=CUIT no disponible
+exception.OfferNotFound=Oferta no encontrada
+exception.PageNotFound=Página no encontrada
+exception.TripNotFound=Viaje no encontrado
+exception.UserAlreadyVerified=Usuario ya verificado
+exception.ProposalNotFound=Propuesta no encontrada
+
 
 #Spring Errors
 Size=Largo incorrecto
@@ -280,7 +290,6 @@ Continue=Continuar
 403ErrorCode=Acceso denegado.
 PageNotFound=Pagina no encontrada
 404UserMsg=Usuario no encontrado
-exception.userNotFound=Usuario no encontrado
 
 
 #Success
