ft: createAlert created

--- a/Front/public/locales/en/translations.json
+++ b/Front/public/locales/en/translations.json
@@ -67,7 +67,11 @@
       "counterOffer": "Counter-Offer",
       "reject": "Reject",
       "cancel": "Cancel"
-    }
+    },
+
+  "alert": {
+    "create": "Create Alert"
+  }
 
 }
   
