--- a/Front/public/locales/es/translations.json
+++ b/Front/public/locales/es/translations.json
@@ -67,6 +67,10 @@
     "counterOffer": "Contraoferta",
     "reject": "Rechazar",
     "cancel": "Cancelar"
+  },
+
+  "alert": {
+    "create": "Crear Alerta"
   }
 }
   
