Feat: i18n of filter exceptions

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -7,6 +7,14 @@ exception.PageNotFound=Page not found
 exception.TripNotFound=Trip not found
 exception.UserAlreadyVerified=User already verified
 exception.ProposalNotFound=Proposal not found
+exception.ReviewNotFound=Review not found
+exception.ResetError=Error while resetting password
+exception.InvalidResetToken=Invalid reset token
+exception.InvalidBasicToken=Invalid basic authentication token
+exception.CouldntDecodeBasic=Failed to decode basic authentication token
+exception.BadCredentials=Bad credentials
+exception.AuthError=Authentication error
+exception.AccessDenied=Access denied
 
 
 #Spring Errors
