Feat: error messages and handling on custom validators

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -17,6 +17,17 @@ exception.AuthError=Authentication error
 exception.AccessDenied=Access denied
 
 
+#Validation
+#Custom Validators
+validation.AlertDate=Departure date cannot be after arrival date
+validation.RequireImage=Image is required
+validation.ImageType=Invalid image type
+validation.DateValidation=Date validation error
+validation.PreventPast=Select future date
+validation.ConfirmPassword=Passwords must match
+#NotCustomValidators
+validation.NotNull=This field is required
+
 #Spring Errors
 Size=Incorrect size.
 Size.acceptForm.name=Name size should be between 6 and 100 characters.
