--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -17,6 +17,17 @@ exception.AuthError=Error de autenticacion
 exception.AccessDenied=Acceso denegado
 
 
+#Validation
+#Custom validators
+validation.AlertDate=La fecha inicial tiene que ser previa a la final
+validation.RequireImage=Debe subir una imagen
+validation.ImageType=Tipo de imagen inválido
+validation.DateValidation=Error de validación de fechas
+validation.PreventPast=Seleccione una fecha futura
+validation.ConfirmPassword=Las contraseñas deben coincidir
+#Not custom validators
+validation.NotNull=Debe completar este campo
+
 
 
 #Spring Errors
