Chore: trip form field validation and i18n

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -15,6 +15,7 @@ exception.CouldntDecodeBasic=Failed to decode basic authentication token
 exception.BadCredentials=Bad credentials
 exception.AuthError=Authentication error
 exception.AccessDenied=Access denied
+exception.LicensePlate=License plate cannot be null or empty
 
 
 #Validation
@@ -25,8 +26,21 @@ validation.ImageType=Invalid image type
 validation.DateValidation=Date validation error
 validation.PreventPast=Select future date
 validation.ConfirmPassword=Passwords must match
+validation.CargoType=Select a valid cargo type
+validation.TruckerLicensePlate=Enter a license plate
 #NotCustomValidators
 validation.NotNull=This field is required
+validation.LicensePlate=Invalid license plate
+validation.AvailableWeight=Weight should be a number greater than 50kg
+validation.AvailableVolume=Volume should be greater than 1m3
+validation.Price=Price should be greater than 0
+validation.DepartureDate=Fill out this field
+validation.ArrivalDate=Fill out this field
+validation.Origin=Origin unavailable
+validation.Destination=Destination unavailable
+
+
+
 
 #Spring Errors
 Size=Incorrect size.
@@ -83,7 +97,6 @@ Pattern.tripForm.price=Price should be greater than 0.
 DateValidation.tripForm=Departure date cannot be after arrival date.
 Pattern.tripForm.id=Invalid cuit.
 Pattern.tripForm.email=Invalid email.
-Pattern.tripForm.licensePlate=Invalid license plate.
 PreventPast.tripForm.departureDate=The date should be in the future.
 PreventPast.tripForm.arrivalDate=The date should be in the future.
 Size.tripForm.name=Name size should be between 6 and 100 characters.
@@ -94,18 +107,7 @@ Size.tripForm.origin=Enter origin.
 RequireImage.tripForm.image=An image is required.
 Size.tripForm.destination=Enter destination.
 
-#SearchTripForm
-Pattern.searchTripForm.departureDate=Fill out this field.
-Pattern.searchTripForm.arrivalDate=Fill out this field.
-Pattern.searchTripForm.licensePlate=Invalid license plate.
-Pattern.searchTripForm.availableWeight=Weight should be greater than 50kg.
-Pattern.searchTripForm.availableVolume=Volume should be greater than 1m3.
-PreventPast.searchTripForm.departureDate=The date should be in the future.
-PreventPast.searchTripForm.arrivalDate=The date should be in the future.
-DateValidation.searchTripForm=Departure date cannot be after arrival date.
-NotNull.searchTripForm.cargoType=Select an option.
-Size.searchTripForm.origin=Select origin.
-Size.searchTripForm.destination=Select destination.
+
 
 
 #navbar
