--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -15,6 +15,7 @@ exception.CouldntDecodeBasic=No se pudo decodificar el token de autorización Ba
 exception.BadCredentials=Credenciales Inválidas
 exception.AuthError=Error de autenticacion
 exception.AccessDenied=Acceso denegado
+exception.LicensePlate=La patente no puede ser nula
 
 
 #Validation
@@ -25,8 +26,18 @@ validation.ImageType=Tipo de imagen inválido
 validation.DateValidation=Error de validación de fechas
 validation.PreventPast=Seleccione una fecha futura
 validation.ConfirmPassword=Las contraseñas deben coincidir
+validation.CargoType=Seleccione un tipo de cargamento válido
+validation.TruckerLicensePlate=Ingrese su patente
 #Not custom validators
 validation.NotNull=Debe completar este campo
+validation.LicensePlate=Patente inválida
+validation.AvailableWeight=El peso mínimo es 50 kg
+validation.AvailableVolume=Volumen mínimo es 1 m3
+validation.Price=Precio debe ser mayor a 0
+validation.DepartureDate=Debe completar este campo
+validation.ArrivalDate=Debe completar este campo
+validation.Origin=Origen no disponible
+validation.Destination=Destino no disponible
 
 
 
@@ -98,17 +109,7 @@ Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
 
 #SearchTripForm
 
-Pattern.searchTripForm.minDepartureDate=Debe completar este campo.
-Pattern.searchTripForm.maxArrivalDate=Debe completar este campo.
-Pattern.searchTripForm.licensePlate=Patente inválida.
-Pattern.searchTripForm.availableWeight=El peso mínimo es 50 kg.
-Pattern.searchTripForm.availableVolume=Volumen mínimo es 1 m3.
-PreventPast.searchTripForm.minDepartureDate=La fecha debe ser en el futuro.
-PreventPast.searchTripForm.maxArrivalDate=La fecha debe ser en el futuro.
-DateValidation.searchTripForm=La fecha de llegada debe ser posterior a la de salida.
-NotNull.searchTripForm.cargoType=Seleccione un tipo de cargamento.
-Size.searchTripForm.origin=Ingrese origen.
-Size.searchTripForm.destination=Ingrese destino.
+
 
 
 #details.jsp
