Fix: security in user form

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -16,7 +16,7 @@ exception.BadCredentials=Bad credentials
 exception.AuthError=Authentication error
 exception.AccessDenied=Access denied
 exception.LicensePlate=License plate cannot be null or empty
-
+exception.CuitAlreadyExists=A user with that CUIT already exists
 
 #Validation
 #Custom Validators
@@ -38,8 +38,12 @@ validation.DepartureDate=Fill out this field
 validation.ArrivalDate=Fill out this field
 validation.Origin=Origin unavailable
 validation.Destination=Destination unavailable
-
-
+validation.Email=Invalid email
+validation.Name.Pattern=Invalid name. Eg: John Doe
+validation.Name.Size=Name size should be between 6 and 100 characters
+validation.Cuit=Invalid CUIT/CUIL. Eg: 20-12345678-1.
+validation.Password.Size=Password must be between 6 and 100 characters long
+validation.Role=Select a valid role
 
 
 #Spring Errors
@@ -48,12 +52,8 @@ Size.acceptForm.name=Name size should be between 6 and 100 characters.
 Pattern.acceptForm.cuit=Invalid cuit.
 Pattern.acceptForm.email=Invalid email.
 alreadyExists=A user with that CUIT already exists.
-Size.userForm.name=Name must be between 6 and 100 characters long.
-Pattern.userForm.cuit=Invalid CUIT/CUIL. Eg: 20-12345678-1.
-Pattern.userForm.email=Invalid email.
-Pattern.userForm.name=Invalid name. Eg: John Doe
+
 ConfirmPasswordValidation.userForm=Passwords must match.
-Size.userForm.password=Password must be between 6 and 100 characters long.
 NotNull.userForm.role=Select a role.
 Pattern.verifyAccountForm.token=Incorrect token.
 IncorrectToken=Incorrect token.
@@ -88,24 +88,6 @@ PreventPast.requestForm.minDepartureDate=The date should be in the future.
 PreventPast.requestForm.maxArrivalDate=The date should be in the future.
 RequireImage.requestForm.image=An image is required.
 DateValidation.requestForm=Departure date cannot be after arrival date.
-
-
-#tripFrom
-Pattern.tripForm.departureDate=Fill out this field.
-Pattern.tripForm.arrivalDate=Fill out this field.
-Pattern.tripForm.price=Price should be greater than 0.
-DateValidation.tripForm=Departure date cannot be after arrival date.
-Pattern.tripForm.id=Invalid cuit.
-Pattern.tripForm.email=Invalid email.
-PreventPast.tripForm.departureDate=The date should be in the future.
-PreventPast.tripForm.arrivalDate=The date should be in the future.
-Size.tripForm.name=Name size should be between 6 and 100 characters.
-Pattern.tripForm.availableWeight=Weight should be a number greater than 50kg.
-Pattern.tripForm.availableVolume=Volume should be a number greater than 1m3.
-Size.tripForm.cargoType=Select an option.
-Size.tripForm.origin=Enter origin.
-RequireImage.tripForm.image=An image is required.
-Size.tripForm.destination=Enter destination.
 
 
 
