--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -16,6 +16,7 @@ exception.BadCredentials=Credenciales Inválidas
 exception.AuthError=Error de autenticacion
 exception.AccessDenied=Acceso denegado
 exception.LicensePlate=La patente no puede ser nula
+exception.CuitAlreadyExists=Ya existe un usuario con este CUIT
 
 
 #Validation
@@ -38,8 +39,12 @@ validation.DepartureDate=Debe completar este campo
 validation.ArrivalDate=Debe completar este campo
 validation.Origin=Origen no disponible
 validation.Destination=Destino no disponible
-
-
+validation.Email=Email inválido
+validation.Name.Pattern=Nombre inválido. Ejemplo: Juan Pérez
+validation.Name.Size=El nombre debe tener entre 6 y 100 caracteres.
+validation.Cuit=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
+validation.Password.Size=La contraseña debe tener entre 6 y 100 caracteres.
+validation.Role=Seleccione un rol válido
 
 #Spring Errors
 Size=Largo incorrecto
@@ -47,12 +52,8 @@ Size.acceptForm.name=El nombre debe tener entre 6 y 100 caracteres.
 Pattern.acceptForm.cuit=No es un cuit valido.
 Pattern.acceptForm.email=Email invalido.
 alreadyExists=Usuario existente con este CUIT
-Size.userForm.name=El nombre debe tener entre 6 y 100 caracteres.
-Pattern.userForm.cuit=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
-Pattern.userForm.email=Email inválido.
-Pattern.userForm.name=Nombre inválido. Ejemplo: Juan Pérez
+
 ConfirmPasswordValidation.userForm=Las contraseñas deben coincidir.
-Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
 Pattern.verifyAccountForm.token=Token incorrecto.
 IncorrectToken=Token incorrecto.
 
@@ -81,27 +82,6 @@ PreventPast.requestForm.minDepartureDate=La fecha debe ser en el futuro.
 PreventPast.requestForm.maxArrivalDate=La fecha debe ser en el futuro.
 DateValidation.requestForm=La fecha de llegada debe ser posterior a la de salida
 RequireImage.requestForm.image=Debe subir una imagen.
-
-
-
-#tripForm
-Size.tripForm.name=El nombre debe tener entre 6 y 100 caracteres.
-Pattern.tripForm.id=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
-Pattern.tripForm.email=Email inválido.
-Pattern.tripForm.licensePlate=Patente inválida.
-Pattern.tripForm.availableWeight=El peso mínimo es 50kg.
-Pattern.tripForm.availableVolume=Volumen mínimo es 1m3.
-Pattern.tripForm.departureDate=Debe completar este campo.
-Pattern.tripForm.arrivalDate=Debe completar este campo.
-Size.tripForm.origin=Ingrese origen.
-Size.tripForm.destination=Ingrese destino.
-Pattern.tripForm.price=Precio debe ser mayor a 0.
-PreventPast.tripForm.departureDate=La fecha debe ser en el futuro.
-PreventPast.tripForm.arrivalDate=La fecha debe ser en el futuro.
-DateValidation.tripForm=La fecha de llegada debe ser posterior a la de salida.
-NotNull.tripForm=Debe completar este campo.
-RequireImage.tripForm.image=Debe subir una imagen.
-NotNull.tripForm.cargoType=Seleccione una tipo de cargamento.
 
 #EditUserForm
 Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
