Fix: unconditional cache

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -17,6 +17,7 @@ exception.AuthError=Error de autenticacion
 exception.AccessDenied=Acceso denegado
 exception.LicensePlate=La patente no puede ser nula
 exception.CuitAlreadyExists=Ya existe un usuario con este CUIT
+exception.ImageNotFound=Imagen no encontrada
 
 
 #Validation
