--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -17,6 +17,7 @@ exception.AuthError=Authentication error
 exception.AccessDenied=Access denied
 exception.LicensePlate=License plate cannot be null or empty
 exception.CuitAlreadyExists=A user with that CUIT already exists
+exception.ImageNotFound=Image not found
 
 #Validation
 #Custom Validators
