Feat: cities endpoint

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -18,6 +18,7 @@ exception.AccessDenied=Access denied
 exception.LicensePlate=License plate cannot be null or empty
 exception.CuitAlreadyExists=A user with that CUIT already exists
 exception.ImageNotFound=Image not found
+exception.CityNotFound=City not found
 
 #Validation
 #Custom Validators
