--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -18,6 +18,8 @@ exception.AccessDenied=Acceso denegado
 exception.LicensePlate=La patente no puede ser nula
 exception.CuitAlreadyExists=Ya existe un usuario con este CUIT
 exception.ImageNotFound=Imagen no encontrada
+exception.CityNotFound=Ciudad no encontrada
+
 
 
 #Validation
