Fix: tokens and OTP

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -30,6 +30,7 @@ validation.PreventPast=Select future date
 validation.ConfirmPassword=Passwords must match
 validation.CargoType=Select a valid cargo type
 validation.TruckerLicensePlate=Enter a license plate
+validation.EmptyBody=Body cannot be empty
 #NotCustomValidators
 validation.NotNull=This field is required
 validation.LicensePlate=Invalid license plate
