--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -32,6 +32,7 @@ validation.PreventPast=Seleccione una fecha futura
 validation.ConfirmPassword=Las contraseñas deben coincidir
 validation.CargoType=Seleccione un tipo de cargamento válido
 validation.TruckerLicensePlate=Ingrese su patente
+validation.EmptyBody=El cuerpo de la solicitud no puede estar vacío
 #Not custom validators
 validation.NotNull=Debe completar este campo
 validation.LicensePlate=Patente inválida
