Feat: bad request exception mapper

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -13,6 +13,7 @@ exception.InvalidResetToken=Invalid reset token
 exception.InvalidBasicToken=Invalid basic authentication token
 exception.CouldntDecodeBasic=Failed to decode basic authentication token
 exception.BadCredentials=Bad credentials
+exception.BadRequest=Bad Request
 exception.AuthError=Authentication error
 exception.AccessDenied=Access denied
 exception.LicensePlate=License plate cannot be null or empty
@@ -47,6 +48,7 @@ validation.Name.Size=Name size should be between 6 and 100 characters
 validation.Cuit=Invalid CUIT/CUIL. Eg: 20-12345678-1.
 validation.Password.Size=Password must be between 6 and 100 characters long
 validation.Role=Select a valid role
+validation.Image.Pattern=Invalid image id
 
 
 #Spring Errors
