--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -13,6 +13,7 @@ exception.InvalidResetToken=Token invalido
 exception.InvalidBasicToken=Token de autorización Basic inválido
 exception.CouldntDecodeBasic=No se pudo decodificar el token de autorización Basic
 exception.BadCredentials=Credenciales Inválidas
+exception.BadRequest=Error en la solicitud
 exception.AuthError=Error de autenticacion
 exception.AccessDenied=Acceso denegado
 exception.LicensePlate=La patente no puede ser nula
@@ -49,6 +50,8 @@ validation.Name.Size=El nombre debe tener entre 6 y 100 caracteres.
 validation.Cuit=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
 validation.Password.Size=La contraseña debe tener entre 6 y 100 caracteres.
 validation.Role=Seleccione un rol válido
+validation.Image.Pattern=Id de imagen inválido
+
 
 #Spring Errors
 Size=Largo incorrecto
