Feat: resize image

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -49,6 +49,7 @@ validation.Cuit=Invalid CUIT/CUIL. Eg: 20-12345678-1.
 validation.Password.Size=Password must be between 6 and 100 characters long
 validation.Role=Select a valid role
 validation.Image.Pattern=Invalid image id
+validation.ImageSize.Pattern=Invalid image size
 
 
 #Spring Errors
