--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -51,6 +51,7 @@ validation.Cuit=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
 validation.Password.Size=La contraseña debe tener entre 6 y 100 caracteres.
 validation.Role=Seleccione un rol válido
 validation.Image.Pattern=Id de imagen inválido
+validation.ImageSize.Pattern=Tamaño de imagen inválido
 
 
 #Spring Errors
