Feat: max image size is 8MB

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -50,6 +50,7 @@ validation.Password.Size=Password must be between 6 and 100 characters long
 validation.Role=Select a valid role
 validation.Image.Pattern=Invalid image id
 validation.ImageSize.Pattern=Invalid image size
+validation.Image.Size=Image must be smaller than 8MB
 
 
 #Spring Errors
