--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -52,9 +52,7 @@ validation.Password.Size=La contraseña debe tener entre 6 y 100 caracteres.
 validation.Role=Seleccione un rol válido
 validation.Image.Pattern=Id de imagen inválido
 validation.ImageSize.Pattern=Tamaño de imagen inválido
-
-
-#Spring Errors
+validation.Image.Size=La imagen debe pesar menos de 8MB
 Size=Largo incorrecto
 Size.acceptForm.name=El nombre debe tener entre 6 y 100 caracteres.
 Pattern.acceptForm.cuit=No es un cuit valido.
