Feat: review validation

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -20,7 +20,7 @@ exception.LicensePlate=La patente no puede ser nula
 exception.CuitAlreadyExists=Ya existe un usuario con este CUIT
 exception.ImageNotFound=Imagen no encontrada
 exception.CityNotFound=Ciudad no encontrada
-
+exception.ReviewAlreadyExists=Ya dejaste una reseña para este viaje
 
 
 #Validation
