--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -20,6 +20,7 @@ exception.LicensePlate=License plate cannot be null or empty
 exception.CuitAlreadyExists=A user with that CUIT already exists
 exception.ImageNotFound=Image not found
 exception.CityNotFound=City not found
+exception.ReviewAlreadyExists=You already reviewed this trip
 
 #Validation
 #Custom Validators
