Feat: filterform security

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -52,6 +52,12 @@ validation.Role=Select a valid role
 validation.Image.Pattern=Invalid image id
 validation.ImageSize.Pattern=Invalid image size
 validation.Image.Size=Image must be smaller than 8MB
+validation.Status=Invalid status
+validation.TripOrRequest=Select "TRIP" or "REQUEST"
+validation.MinAvailableWeight.Range=Weight must range from 0 to 100000 kg
+validation.MinAvailableVolume.Range=Volume must range from 1 to 1000 m3
+validation.MinPrice.Range=Minimum price must range between 0 and 999999
+validation.MaxPrice.Range=Maximum price must range between 0 and 1000000
 
 
 #Spring Errors
