--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -53,6 +53,15 @@ validation.Role=Seleccione un rol válido
 validation.Image.Pattern=Id de imagen inválido
 validation.ImageSize.Pattern=Tamaño de imagen inválido
 validation.Image.Size=La imagen debe pesar menos de 8MB
+validation.Status=Status inválido
+validation.TripOrRequest=Seleccione "TRIP" o "REQUEST"
+validation.MinAvailableWeight.Range=EL peso debe estar entre 0 y 100000 kg
+validation.MinAvailableVolume.Range=El volumen debe estar entre 1 y 1000 m3
+validation.MinPrice.Range=El precio debe estar entre 0 y 999999
+validation.MaxPrice.Range=El precio debe estar entre 0 y 1000000
+
+
+#Spring Errors
 Size=Largo incorrecto
 Size.acceptForm.name=El nombre debe tener entre 6 y 100 caracteres.
 Pattern.acceptForm.cuit=No es un cuit valido.
