Chore: validation and messages

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -21,6 +21,7 @@ exception.CuitAlreadyExists=A user with that CUIT already exists
 exception.ImageNotFound=Image not found
 exception.CityNotFound=City not found
 exception.ReviewAlreadyExists=You already reviewed this trip
+exception.TripOwner=You must be the owner to retrieve this trip
 
 #Validation
 #Custom Validators
@@ -54,11 +55,11 @@ validation.ImageSize.Pattern=Invalid image size
 validation.Image.Size=Image must be smaller than 8MB
 validation.Status=Invalid status
 validation.TripOrRequest=Select "TRIP" or "REQUEST"
-validation.MinAvailableWeight.Range=Weight must range from 0 to 100000 kg
-validation.MinAvailableVolume.Range=Volume must range from 1 to 1000 m3
+validation.Weight.Range=Weight must range from 0 to 100000 kg
+validation.Volume.Range=Volume must range from 1 to 1000 m3
 validation.MinPrice.Range=Minimum price must range between 0 and 999999
 validation.MaxPrice.Range=Maximum price must range between 0 and 1000000
-
+validation.SortOrder=Invalid sort order
 
 #Spring Errors
 Size=Incorrect size.
