--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -21,6 +21,7 @@ exception.CuitAlreadyExists=Ya existe un usuario con este CUIT
 exception.ImageNotFound=Imagen no encontrada
 exception.CityNotFound=Ciudad no encontrada
 exception.ReviewAlreadyExists=Ya dejaste una reseña para este viaje
+exception.TripOwner=Solo el dueño del viaje puede realizar esta acción
 
 
 #Validation
@@ -55,10 +56,11 @@ validation.ImageSize.Pattern=Tamaño de imagen inválido
 validation.Image.Size=La imagen debe pesar menos de 8MB
 validation.Status=Status inválido
 validation.TripOrRequest=Seleccione "TRIP" o "REQUEST"
-validation.MinAvailableWeight.Range=EL peso debe estar entre 0 y 100000 kg
-validation.MinAvailableVolume.Range=El volumen debe estar entre 1 y 1000 m3
+validation.Weight.Range=EL peso debe estar entre 0 y 100000 kg
+validation.Volume.Range=El volumen debe estar entre 1 y 1000 m3
 validation.MinPrice.Range=El precio debe estar entre 0 y 999999
 validation.MaxPrice.Range=El precio debe estar entre 0 y 1000000
+validation.SortOrder=Invalid sort order
 
 
 #Spring Errors
