Feat: offers endpoint feats

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -60,6 +60,8 @@ validation.Volume.Range=Volume must range from 1 to 1000 m3
 validation.MinPrice.Range=Minimum price must range between 0 and 999999
 validation.MaxPrice.Range=Maximum price must range between 0 and 1000000
 validation.SortOrder=Invalid sort order
+validation.Price.Min=Minimum price is 1
+validation.Description=Description should be shorter than 250 characters
 
 #Spring Errors
 Size=Incorrect size.
