--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -61,6 +61,8 @@ validation.Volume.Range=El volumen debe estar entre 1 y 1000 m3
 validation.MinPrice.Range=El precio debe estar entre 0 y 999999
 validation.MaxPrice.Range=El precio debe estar entre 0 y 1000000
 validation.SortOrder=Invalid sort order
+validation.Price.Min=El precio mínimo es 1
+validation.Description=La descripción debe tener menos de 250 caracteres
 
 
 #Spring Errors
