--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -22,6 +22,8 @@ exception.ImageNotFound=Image not found
 exception.CityNotFound=City not found
 exception.ReviewAlreadyExists=You already reviewed this trip
 exception.TripOwner=You must be the owner to retrieve this trip
+exception.AlertNotFound=Alert not found
+exception.AlertAlreadyExists=You already have an existent alert
 
 #Validation
 #Custom Validators
@@ -62,6 +64,9 @@ validation.MaxPrice.Range=Maximum price must range between 0 and 1000000
 validation.SortOrder=Invalid sort order
 validation.Price.Min=Minimum price is 1
 validation.Description=Description should be shorter than 250 characters
+validation.fromDate=Select a valid date format
+validation.toDate=Select a valid date format
+
 
 #Spring Errors
 Size=Incorrect size.
