--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -22,6 +22,9 @@ exception.ImageNotFound=Imagen no encontrada
 exception.CityNotFound=Ciudad no encontrada
 exception.ReviewAlreadyExists=Ya dejaste una reseña para este viaje
 exception.TripOwner=Solo el dueño del viaje puede realizar esta acción
+exception.AlertNotFound=Alerta no encontrada
+exception.AlertAlreadyExists=Ya tiene una alerta existente
+
 
 
 #Validation
@@ -63,6 +66,8 @@ validation.MaxPrice.Range=El precio debe estar entre 0 y 1000000
 validation.SortOrder=Invalid sort order
 validation.Price.Min=El precio mínimo es 1
 validation.Description=La descripción debe tener menos de 250 caracteres
+validation.fromDate=Seleccione un formato de fecha válido
+validation.toDate=Seleccione un formato de fecha válido
 
 
 #Spring Errors
