ft: alert Api and useful translations

--- a/Front/public/locales/en/translations.json
+++ b/Front/public/locales/en/translations.json
@@ -21,7 +21,8 @@
       "arrivalDate": "Arrival Date",
       "departureDate": "Departure Date",
       "licensePlate": "License Plate",
-      "offeredPrice": "Offered Price"
+      "offeredPrice": "Offered Price",
+      "browse": "Browse publications"
     },
 
     "myalert": {
@@ -71,6 +72,10 @@
 
   "alert": {
     "create": "Create Alert"
+  },
+  "sentOffers": {
+    "noOffers": "You haven't sent any offers",
+    "sentOffers": "Sent Offers"
   }
 
 }
