Chore: exceptions and i18n

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -24,6 +24,7 @@ exception.ReviewAlreadyExists=You already reviewed this trip
 exception.TripOwner=You must be the owner to retrieve this trip
 exception.AlertNotFound=Alert not found
 exception.AlertAlreadyExists=You already have an existent alert
+exception.CounterOfferAlreadyExists=You already have an existent counter-offer for this trip
 
 #Validation
 #Custom Validators
@@ -66,6 +67,7 @@ validation.Price.Min=Minimum price is 1
 validation.Description=Description should be shorter than 250 characters
 validation.fromDate=Select a valid date format
 validation.toDate=Select a valid date format
+validation.Action=Action must be either "ACCEPT" or "REJECT"
 
 
 #Spring Errors
