--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -24,6 +24,7 @@ exception.ReviewAlreadyExists=Ya dejaste una reseña para este viaje
 exception.TripOwner=Solo el dueño del viaje puede realizar esta acción
 exception.AlertNotFound=Alerta no encontrada
 exception.AlertAlreadyExists=Ya tiene una alerta existente
+exception.CounterOfferAlreadyExists=Ya tiene una contraoferta para este viaje
 
 
 
@@ -68,6 +69,8 @@ validation.Price.Min=El precio mínimo es 1
 validation.Description=La descripción debe tener menos de 250 caracteres
 validation.fromDate=Seleccione un formato de fecha válido
 validation.toDate=Seleccione un formato de fecha válido
+validation.Action=La acción debe ser "ACCEPT" o "REJECT"
+
 
 
 #Spring Errors
