Chore: i18n, cleanup and removing magic numbers

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -69,51 +69,7 @@ validation.fromDate=Select a valid date format
 validation.toDate=Select a valid date format
 validation.Action=Action must be either "ACCEPT" or "REJECT"
 
-
-#Spring Errors
-Size=Incorrect size.
-Size.acceptForm.name=Name size should be between 6 and 100 characters.
-Pattern.acceptForm.cuit=Invalid cuit.
-Pattern.acceptForm.email=Invalid email.
-alreadyExists=A user with that CUIT already exists.
-
-ConfirmPasswordValidation.userForm=Passwords must match.
-NotNull.userForm.role=Select a role.
-Pattern.verifyAccountForm.token=Incorrect token.
-IncorrectToken=Incorrect token.
-
-#Alerts
-AlertDateValidation.alertForm=Departure date cannot be after arrival date.
-PreventPast.alertForm.toDate=Date must be in the future.
-PreventPast.alertForm.fromDate=Date must be in the future.
-
-Max.filterForm.minAvailableVolume=Volume exceded.
-
-
-#SendOffer
-NotNull.acceptForm.price=Minimum price 1.
-Min.acceptForm.price=Minimum price 1.
-
-#EditUserForm
-Pattern.editUserForm.name=Invalid name. Eg: John Doe
-Size.editUserForm.name=Name must be between 6 and 100 characters long.
-
-
-#requestForm
-Pattern.requestForm.requestedWeight=Weight should be a number greater than 50kg.
-Pattern.requestForm.requestedVolume=Volume should be a number greater than 1m3.
-Pattern.requestForm.maxPrice=Price should be greater than 0.
-NotNull.requestForm.cargoType=Select an option.
-Pattern.requestForm.minDepartureDate=Fill out this field.
-Pattern.requestForm.maxArrivalDate=Fill out this field.
-NotNull.requestForm.minDepartureDate=Fill out this field.
-NotNull.requestForm.maxArrivalDate=Fill out this field.
-PreventPast.requestForm.minDepartureDate=The date should be in the future.
-PreventPast.requestForm.maxArrivalDate=The date should be in the future.
-RequireImage.requestForm.image=An image is required.
-DateValidation.requestForm=Departure date cannot be after arrival date.
-
-
+# ------------- FRONT ------------
 
 
 #navbar
