--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -26,8 +26,6 @@ exception.AlertNotFound=Alerta no encontrada
 exception.AlertAlreadyExists=Ya tiene una alerta existente
 exception.CounterOfferAlreadyExists=Ya tiene una contraoferta para este viaje
 
-
-
 #Validation
 #Custom validators
 validation.AlertDate=La fecha inicial tiene que ser previa a la final
@@ -71,52 +69,7 @@ validation.fromDate=Seleccione un formato de fecha válido
 validation.toDate=Seleccione un formato de fecha válido
 validation.Action=La acción debe ser "ACCEPT" o "REJECT"
 
-
-
-#Spring Errors
-Size=Largo incorrecto
-Size.acceptForm.name=El nombre debe tener entre 6 y 100 caracteres.
-Pattern.acceptForm.cuit=No es un cuit valido.
-Pattern.acceptForm.email=Email invalido.
-alreadyExists=Usuario existente con este CUIT
-
-ConfirmPasswordValidation.userForm=Las contraseñas deben coincidir.
-Pattern.verifyAccountForm.token=Token incorrecto.
-IncorrectToken=Token incorrecto.
-
-#Alerts
-AlertDateValidation.alertForm=La fecha inicial tiene que ser previa a la final.
-PreventPast.alertForm.toDate=La fecha debe ser en el futuro.
-PreventPast.alertForm.fromDate=La fecha debe ser en el futuro.
-
-Max.filterForm.minAvailableVolume=Volumen excedido.
-
-#SendOffer
-NotNull.acceptForm.price=Precio minimo 1.
-Min.acceptForm.price=Precio minimo 1.
-
-
-#requestForm
-Pattern.requestForm.requestedWeight=El peso debe ser un numero mayor a 50kg.
-Pattern.requestForm.requestedVolume=El volumen debe ser un numero mayor a 1m3.
-Pattern.requestForm.maxPrice=El precio debe ser mayor a 0.
-NotNull.requestForm.cargoType=Seleccione un tipo de cargamento
-Pattern.requestForm.minDepartureDate=Debe completar este campo
-Pattern.requestForm.maxArrivalDate=Debe completar este campo
-NotNull.requestForm.minDepartureDate=Debe completar este campo.
-NotNull.requestForm.maxArrivalDate=Debe completar este campo.
-PreventPast.requestForm.minDepartureDate=La fecha debe ser en el futuro.
-PreventPast.requestForm.maxArrivalDate=La fecha debe ser en el futuro.
-DateValidation.requestForm=La fecha de llegada debe ser posterior a la de salida
-RequireImage.requestForm.image=Debe subir una imagen.
-
-#EditUserForm
-Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
-Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
-
-#SearchTripForm
-
-
+# ------------- FRONT ------------
 
 
 #details.jsp
