--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -25,6 +25,7 @@ exception.TripOwner=You must be the owner to retrieve this trip
 exception.AlertNotFound=Alert not found
 exception.AlertAlreadyExists=You already have an existent alert
 exception.CounterOfferAlreadyExists=You already have an existent counter-offer for this trip
+exception.CargoTypeNotFound=Cargo type not found
 
 #Validation
 #Custom Validators
@@ -68,6 +69,12 @@ validation.Description=Description should be shorter than 250 characters
 validation.fromDate=Select a valid date format
 validation.toDate=Select a valid date format
 validation.Action=Action must be either "ACCEPT" or "REJECT"
+
+# ------------- CargoTypes ------------
+cargoType.Hazardous=Hazardous
+cargoType.Normal=Normal
+cargoType.Refrigerated=Refrigerated
+
 
 # ------------- FRONT ------------
 
