--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -25,6 +25,8 @@ exception.TripOwner=Solo el dueño del viaje puede realizar esta acción
 exception.AlertNotFound=Alerta no encontrada
 exception.AlertAlreadyExists=Ya tiene una alerta existente
 exception.CounterOfferAlreadyExists=Ya tiene una contraoferta para este viaje
+exception.CargoTypeNotFound=Tipo de carga no encontrado
+
 
 #Validation
 #Custom validators
@@ -68,6 +70,11 @@ validation.Description=La descripción debe tener menos de 250 caracteres
 validation.fromDate=Seleccione un formato de fecha válido
 validation.toDate=Seleccione un formato de fecha válido
 validation.Action=La acción debe ser "ACCEPT" o "REJECT"
+
+# ------------- CargoType ------------
+cargoType.Hazardous=Peligrosa
+cargoType.Normal=Normal
+cargoType.Refrigerated=Refrigerada
 
 # ------------- FRONT ------------
 
